Fixed bug with project font being too big

--- a/src/main/resources/static/styles/core.css
+++ b/src/main/resources/static/styles/core.css
@@ -595,7 +595,7 @@ footer #footer-links {
   line-height: 3em;
 }
 #view-project-page #project-title-side h1 {
-  font-size: 3.5em;
+  font-size: 2.25em;
 }
 #view-project-page #project-sidebar {
   position: fixed;
