--- a/src/main/resources/static/styles/viewproject.scss
+++ b/src/main/resources/static/styles/viewproject.scss
@@ -18,7 +18,7 @@
     width: 100vh;
     line-height: 3em;
     h1 {
-      font-size: 3.5em;
+      font-size: 2.25em;
     }
   }
 
